# sequencekit

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
apps/dashboard/: .env.local.example  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/api/attestation/: route.ts
apps/dashboard/app/api/demo/cancel-order/: route.ts
apps/dashboard/app/api/demo/fill-order/: route.ts
apps/dashboard/app/api/demo/place-order/: route.ts
apps/dashboard/app/api/mev-stats/: route.ts
apps/dashboard/app/api/shredstream/: route.ts
apps/dashboard/app/api/toggle-plugin/: route.ts
apps/dashboard/app/components/: AttestationFeed.tsx  CandleChart.tsx  DashboardClient.tsx  OrderBook.tsx  OrderForm.tsx  SpreadMonitor.tsx  TopBar.tsx  TradeHistory.tsx  WalletProvider.tsx
apps/dashboard/lib/: constants.ts  market.ts  types.ts
crates/maker-shield/: Cargo.toml
crates/maker-shield/src/: attestation.rs  classifier.rs  lib.rs  orderer.rs  types.rs
crates/micro-clob/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
crates/micro-clob/programs/micro-clob/: Cargo.toml
crates/micro-clob/programs/micro-clob/src/: events.rs  lib.rs
crates/micro-clob/programs/micro-clob/src/instructions/: cancel_order.rs  create_vaults.rs  fill_order.rs  initialize_market.rs  mod.rs  place_order.rs  toggle_plugin.rs  update_quote.rs
crates/micro-clob/programs/micro-clob/src/state/: market.rs  mod.rs  order.rs  order_book.rs  user_position.rs
crates/micro-clob/tests/: cancel_before_fill.ts
scripts/: apply-shredstream.ts  compute-discriminators.ts  demo-maker.ts  demo-taker.ts  fund-demo-wallets.ts  init-market.ts
