[workspace]
members = ["crates/maker-shield"]
resolver = "2"

# micro-clob has its own Anchor workspace at crates/micro-clob/Cargo.toml
# Build it separately with: cd crates/micro-clob && anchor build

[workspace.dependencies]
solana-sdk  = "=1.18.22"
sha2        = "0.10"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "1.0"
log         = "0.4"
env_logger  = "0.11"
