[package]
name = "maker-shield"
version = "0.1.0"
edition = "2021"
description = "First open-source Jito BAM plugin — enforces cancel-before-fill ordering inside AMD SEV-SNP TEE"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable real AMD SEV-SNP attestation signing.
# Requires running on hardware with /dev/sev-guest available.
# Usage: cargo build --release --features tee
tee = []

[dependencies]
solana-sdk = { workspace = true }
sha2       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
log        = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
